--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="auto" lang="en">
+<html dir="auto" lang="fa">
 <head>
 	<meta charset="UTF-8" />
 	<title>MovieLab - A cross-platform mobile app for browsing movies and TV shows details</title>
@@ -23,7 +23,7 @@
 	<div class="app__info">
 		<h1 class="app__name">MovieLab: Movies & TV Guide</h1>
 		<a href="https://ErfanRht.GitHub.IO" >
-			<h2 class="developer__name">Erfan Rahmati</h2>
+			<h2 class="developer__name">امیر سینا رازقندی</h2>
 		</a>
 		<p class="app__description">An open source and a cross-platform mobile app for browsing movies and TV shows.</p>
 		<div class="app__buttons app__buttons--desktop">
