--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html dir="auto" lang="fa">
 <head>
 	<meta charset="UTF-8" />
-	<title>MovieLab - A cross-platform mobile app for browsing movies and TV shows details</title>
+	<title>NoxMovie - A cross-platform mobile app for browsing movies</title>
 
-	<meta name="description" content="MovieLab is an open source and a cross-platform mobile app for browsing movies and TV shows, including cast, production crew and personal biographies and plot summaries." />
+	<meta name="description" content="NoxMovie is an open source and a cross-platform mobile app for browsing movies and animations." />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="icon" href="assets/favicon.png" />
 
-	<meta property="og:title" content="MovieLab - A cross-platform mobile app for browsing movies and TV shows details" />
-	<meta property="og:description" content="MovieLab is an open source and a cross-platform mobile app for browsing movies and TV shows, including cast, production crew and personal biographies and plot summaries." />
+	<meta property="og:title" content="NoxMovie - A cross-platform mobile app for browsing movies" />
+	<meta property="og:description" content="NoxMovie is an open source and a cross-platform mobile app for browsing movies and animations." />
 	<meta property="og:image" content="assets/og-image.png" />
 
 	<link rel="stylesheet" href="assets/tobi.css" />
@@ -19,27 +19,27 @@
 	<body>
 		<main>
 <header class="app__header container">
-	<div class="app__logo-wrapper"> <img class="app__logo" src="content/image/logo.jpg" alt="MovieLab"></div>
+	<div class="app__logo-wrapper"> <img class="app__logo" src="content/image/logo.jpg" alt="NoxMovie"></div>
 	<div class="app__info">
-		<h1 class="app__name">MovieLab: Movies & TV Guide</h1>
-		<a href="https://ErfanRht.GitHub.IO" >
-			<h2 class="developer__name">امیر سینا رازقندی</h2>
+		<h1 class="app__name">NoxMovie: Watch free movies</h1>
+		<a href="https://AmirSinaRZ.GitHub.IO" >
+			<h2 class="developer__name">AmirSina Razghandi</h2>
 		</a>
-		<p class="app__description">An open source and a cross-platform mobile app for browsing movies and TV shows.</p>
+		<p class="app__description">NoxMovie is an open source and a cross-platform mobile app for browsing movies and animations.</p>
 		<div class="app__buttons app__buttons--desktop">
-			<a href="https://raw.githubusercontent.com/ErfanRht/MovieLab-Intro/master/content/apk/MovieLab-v3.0.1.apk" class="btn">
+			<a href="https://raw.githubusercontent.com/AmirSinaRZ/NoxMovie/nox/content/apk/NoxMovie-v1.0.apk" class="btn">
 				<span class="download-btn">Download Now!</span>
 			</a>
 		</div>
-		<h4 class="app__osversion-alarm--desktop">Only Android version is available right now! iOS and PWA version will be available soon!</h4>
+		<h4 class="app__osversion-alarm--desktop">Only Android version is available</h4>
 	</div>
 </header>
 <div class="container app__buttons app__buttons--mobile">
-		<a href="https://raw.githubusercontent.com/ErfanRht/MovieLab-Intro/master/content/apk/MovieLab-v3.0.1.apk" class="btn">
+		<a href="https://raw.githubusercontent.com/AmirSinaRZ/NoxMovie/nox/content/apk/NoxMovie-v1.0.apk" class="btn">
 			<span class="download-btn">Download Now!</span>
 		</a>
 </div>
-<h4 class="app__osversion-alarm--mobile">Only Android version is available right now! iOS and PWA version will be available soon!</h4>
+<h4 class="app__osversion-alarm--mobile">Only Android version is available</h4>
 <section class="app__screenshots app__section">
 	<div class="container">
 		<h2 class="app__section-title">Screenshots</h2>
@@ -76,13 +76,13 @@
 <section class="app__fulldescription app__section container">
 	<h2 class="app__section-title">Description</h2>
 	<div class="app__fulldescription-content">
-		<p>MovieLab is an open source and a cross-platform mobile app where you can find movies, series, seasons, episodes, movie recommendation and actors from the largest movie database IMDB. With this spp, you can also find season and movie ratings to make a solid decision on what to watch next.</p>
-		With MovieLab, you have movies and series information right at your fingertips!</p>
+		<p>NoxMovie is an open source and a cross-platform mobile app where you can watch movies, series, seasons, episodes from the movie database JaheshTV. With this app, you can also find season and movie ratings to make a solid decision on what to watch next.</p>
+		With NoxMovie, you have movies and series information right at your fingertips!</p>
 		<p>With a lot of features:</p>
 		<ul>
-		<li>View movies/series details such as ratings, cast, seasons, similars and other details</details></li>
-		<li>Search for movies, series and actors</li>
-		<li>Get personal movie suggestions based on your interest</li>
+		<li>View movies/series details such as ratings, seasons, similars and other details</details></li>
+		<li>Search for movies, series and animations</li>
+		<li>Watch movies, series with subtitle or persian dub</li>
 		</ul>
 
 	</div>
@@ -92,23 +92,19 @@
 	<div class="app__additionalinfo-content">
 		<p>
 			<span class="app__info-title" >Updated: </span>
-			<span class="app__info-value">14 May 2022</span>
+			<span class="app__info-value">28 Oct 2022</span>
 		</p>
 		<p>
 			<span class="app__info-title" >Size: </span>
-			<span class="app__info-value">20M</span>
+			<span class="app__info-value">23M</span>
 		</p>
 		<p>
 			<span class="app__info-title" >Current Version: </span>
-			<span class="app__info-value">3.0.1</span>
+			<span class="app__info-value">1.0</span>
 		</p>
 		<p>
 			<span class="app__info-title" >Requires Android: </span>
-			<span class="app__info-value">4.2 and up</span>
-		</p>
-		<p>
-			<span class="app__info-title" >Requires iOS: </span>
-			<span class="app__info-value">9.0 and up</span>
+			<span class="app__info-value">8 and up</span>
 		</p>
 		<p>
 			<span class="app__info-title" >Interactive Elements: </span>
@@ -116,8 +112,8 @@
 		</p>
 		<p>
 			<span class="app__info-title" >Developer: </span>
-			<span class="app__info-value"><a href="https://ErfanRht.GitHub.IO">
-				Erfan Rahmati
+			<span class="app__info-value"><a href="https://AmirSinaRZ.GitHub.IO">
+				AmirSina Razghandi
 			</a>
 		</span>
 	</p>
