--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<body>
 		<main>
 <header class="app__header container">
-	<div class="app__logo-wrapper"> <img class="app__logo" src="content/image/logo.jpg" alt="NoxMovie"></div>
+	<div class="app__logo-wrapper"> <img class="app__logo" src="content/image/logo.png" alt="NoxMovie"></div>
 	<div class="app__info">
 		<h1 class="app__name">NoxMovie: Watch free movies</h1>
 		<a href="https://AmirSinaRZ.GitHub.IO" >
