--- a/index.html
+++ b/index.html
@@ -43,30 +43,22 @@
 	</div>
 	<div class="app__screenshots-wrapper container-desktop">
 		<div class="app__screenshots-list">
-			<a href="content/image/app-intro-mobile.jpg" class="lightbox">
-				<img src="content/image/app-intro-mobile.jpg" class="app__screenshot" alt="" />
+			<a href="content/image/2169241.jpg" class="lightbox">
+				<img src="content/image/2169241.jpg" class="app__screenshot" alt="" />
 			</a>
-			<a href="content/image/presentation_mockup_1.jpg" class="lightbox">
-				<img src="content/image/presentation_mockup_1.jpg" class="app__screenshot" alt="" />
+			<a href="content/image/2589848.jpg" class="lightbox">
+				<img src="content/image/2589848.jpg" class="app__screenshot" alt="" />
 			</a>
-			<a href="content/image/presentation_mockup_2.jpg" class="lightbox">
-				<img src="content/image/presentation_mockup_2.jpg" class="app__screenshot" alt="" />
+			<a href="content/image/7262479.jpg" class="lightbox">
+				<img src="content/image/7262479.jpg" class="app__screenshot" alt="" />
 			</a>
-			<a href="content/image/presentation_mockup_3.jpg" class="lightbox">
-				<img src="content/image/presentation_mockup_3.jpg" class="app__screenshot" alt="" />
+			<a href="content/image/1647605.jpg" class="lightbox">
+				<img src="content/image/1647605.jpg" class="app__screenshot" alt="" />
 			</a>
-			<a href="content/image/presentation_mockup_4.jpg" class="lightbox">
-				<img src="content/image/presentation_mockup_4.jpg" class="app__screenshot" alt="" />
+			<a href="content/image/8287208.jpg" class="lightbox">
+				<img src="content/image/8287208.jpg" class="app__screenshot" alt="" />
 			</a>
-			<a href="content/image/presentation_mockup_5.jpg" class="lightbox">
-				<img src="content/image/presentation_mockup_5.jpg" class="app__screenshot" alt="" />
-			</a>
-			<a href="content/image/presentation_mockup_6.jpg" class="lightbox">
-				<img src="content/image/presentation_mockup_6.jpg" class="app__screenshot" alt="" />
-			</a>
-			<a href="content/image/presentation_mockup_7.jpg" class="lightbox">
-				<img src="content/image/presentation_mockup_7.jpg" class="app__screenshot" alt="" />
-			</a>
+
 		</div>
 	</div>
 </section>
