--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 		</a>
 		<p class="app__description">NoxMovie is an open source and a cross-platform mobile app for browsing movies and animations.</p>
 		<div class="app__buttons app__buttons--desktop">
-			<a href="https://raw.githubusercontent.com/AmirSinaRZ/NoxMovie/nox/content/apk/NoxMovie.apk" class="btn">
+			<a href="https://raw.githubusercontent.com/AmirSinaRZ/NoxMovie/nox/content/apk/NoxMovie-v1.1.apk" class="btn">
 				<span class="download-btn">Download Now!</span>
 			</a>
 
 </header>
 <div class="container app__buttons app__buttons--mobile">
-		<a href="https://raw.githubusercontent.com/AmirSinaRZ/NoxMovie/nox/content/apk/NoxMovie.apk" class="btn">
+		<a href="https://raw.githubusercontent.com/AmirSinaRZ/NoxMovie/nox/content/apk/NoxMovie-v1.1.apk" class="btn">
 			<span class="download-btn">Download Now!</span>
 		</a>
 </div>
